@startuml ERD_Forecast_Energy
!define primary_key(x) <b><u>x</u></b>
!define foreign_key(x) <i>x</i>
!define not_null(x) <b>x</b>

hide circle
skinparam linetype ortho
skinparam entity {
  BackgroundColor #FEFECE
  BorderColor #A80036
  ArrowColor #A80036
}

title Solar O&M — Forecast & Energy Production

entity "Site" as site {
  primary_key(id) : INT <<PK>>
  --
  not_null(name) : VARCHAR
  not_null(plantCode) : VARCHAR <<unique>>
}

entity "SiteForecastMonthly" as fcm {
  primary_key(siteId) : INT <<PK, FK>>
  primary_key(month) : INT <<PK>>
  --
  globalKwhM2 : FLOAT
  eGridKwh : FLOAT
  prRatio : FLOAT
}

entity "SiteForecastYearly" as fcy {
  primary_key(siteId) : INT <<PK, FK>>
  primary_key(year) : INT <<PK>>
  --
  degradationPct : FLOAT
  annualProductionKwh : FLOAT
  warrantyEnergyOutputKwh : FLOAT
}

entity "SiteMonthlyActual" as actual {
  primary_key(siteId) : INT <<PK, FK>>
  primary_key(year) : INT <<PK>>
  primary_key(month) : INT <<PK>>
  --
  not_null(plantCode) : VARCHAR
  not_null(key) : VARCHAR
  production : FLOAT
  pr : FLOAT
  revenue : FLOAT
}

' Relationships
site ||--o{ fcm : "forecasts"
site ||--o{ fcy : "forecasts"
site ||--o{ actual : "actuals"

@enduml
